[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rust-map-parser"
version = "0.2.2"
description = "Standalone Python parser, heatmap generator, and renderer for Facepunch Rust map files"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "rust-map-parser contributors"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "lz4==4.4.4",
  "numpy>=2.0,<3",
  "Pillow>=12.2,<13",
  "numba>=0.61,<1",
]

[project.optional-dependencies]
assets = ["UnityPy==1.24.2"]

[project.urls]
Homepage = "https://github.com/Cooperkit/Rustmap-Parser"
Repository = "https://github.com/Cooperkit/Rustmap-Parser"
Documentation = "https://github.com/Cooperkit/Rustmap-Parser#readme"
Issues = "https://github.com/Cooperkit/Rustmap-Parser/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rustmap_parser.data" = ["*.json"]
"rustmap_parser.data.tunnel_tiles" = ["*.json", "*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
